# sat4ec

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  environment.yml  exe_collection_runner.ipynb  exe_runner.ipynb  indicator.py  plot_data.py  pyproject.toml  sat4c.Dockerfile  sat4ec.ipynb  sat4ec_env.yml
docs/: aois.md  edc.md  file_structure.md
docs/aoi_files/: audi_ingolstadt.geojson  audi_neckarsulm.geojson  ford_cologne.geojson  ford_saarlouis.geojson  locations_germany.geojson  mercedes_bremen.geojson  mercedes_duesseldorf.geojson  mercedes_ludwigsfelde.geojson  opel_eisenach.geojson  opel_ruesselsheim.geojson  porsche_leipzig.geojson  test_aoi.geojson  vw_emden.geojson  vw_wolfsburg.geojson  vw_zwickau.geojson
docs/aois/: audi_ingolstadt.geojson  audi_neckarsulm.geojson  bmw_dingolfing.geojson  bmw_leipzig.geojson  bmw_regensburg.geojson  ford_cologne.geojson  ford_saarlouis.geojson  mercedes_bremen.geojson  mercedes_duesseldorf.geojson  mercedes_ludwigsfelde.geojson  mercedes_rastatt.geojson  mercedes_sindelfingen.geojson  opel_eisenach.geojson  opel_ruesselsheim.geojson  (+5 more)
obsolete/: from_notebook.py
sat4ec/: NOTES.txt  anomaly_detection.py  aoi_check.py  data_retrieval.py  indicator.py  main.py  plot_data.py  stac.py  system.py
source/: NOTES.txt  anomaly_detection.py  aoi_check.py  data_retrieval.py  main.py  plot_data.py  stac.py
tests/: sat4ec_runner.py  test_anomaly_detection.py  test_aoi.py  test_data_retrieval.py  test_helper_functions.py  test_plotting.py  test_stac.py
(+40 files in other folders)
